Add benchmarks for simdjson-java